Hnagman FE, no css

--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -5,8 +5,10 @@
     <style></style>
   </head>
   <body>
-    <div class="content">
+    <div id="content" class="content">
       <h1>time to get to hanging.... I mean guessing...</h1>
+      <button id="startBtn">START!</button>
+      <div id="wordWrapper"></div>
     </div>
     <script src="scripts.js"></script>
   </body>
